tests/NormalTests/paczka1/fuzzy1/64974799.err
Error in line 1: qOYD78s7c S952 7,8
Error in line 11: S952 S952 86,20
Error in line 16: qOYD78s7c A154 12,94
Error in line 20: JIxWWWFvk A654 1,3
Error in line 28: JIxWWWFvk S952 95,53
Error in line 24: JIxWWWFvk S952 80,8
Error in line 26: GGZHUZZEUe A154 421,9
Error in line 17: S952 S952 186,6
Error in line 33: DfP S952 48,1
